# but-dad

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml  spec-loop-task.md
.github/scripts/: openhands_run.py
.github/workflows/: openhands-resolver.yml
docs/: install-with-codex.md
docs/experiments/: fast-agent-findings.md  fast-agent-sample-output.md  reusable-mcp-tool-spec-improved-final-draft-6turn.md
docs/experiments/mcp-tool/issue-10-preview/: final-spec.md  summary.json  transcript.json  transcript.md
docs/experiments/mcp-tool/public-preview-sample/: final-spec.md  summary.json  transcript.json  transcript.md
docs/planning/: openhands-automation.md  project-brief.md  reusable-mcp-tool-spec.md
skills/use-but-dad-spec-loop/: SKILL.md
skills/use-but-dad-spec-loop/references/: example-invocations.md
skills/use-but-dad-spec-loop/scripts/: start_server.sh
src/but_dad/: __init__.py  __main__.py  cli.py  fast_agent_experiment.py  loop.py  mcp_server.py  mcp_tool.py
tests/: test_fast_agent_experiment.py  test_loop.py  test_mcp_tool.py
