[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "but-dad"
version = "0.1.0"
description = "Spec-first adversarial writer/coach loop"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "mcp>=1.26.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
